fixing alignment error on studio component error message, i18n error message

--- a/cms/static/sass/views/_unit.scss
+++ b/cms/static/sass/views/_unit.scss
@@ -357,6 +357,7 @@ body.course.unit,.view-unit {
         }
 
       .wrapper-alert-error {
+          margin-top: ($baseline*1.25);
           box-shadow: none;
           border-top: 5px solid $red-l1;
 
